# topicctl

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: ci.yml  py-ci.yaml
cmd/topicctl/subcmd/: apply.go
examples/local-cluster/topics/: topic-default.yaml  topic-default2.yaml
pkg/admin/: types.go
pkg/apply/: apply.go  apply_test.go  format.go  types.go
pkg/apply/assigners/: evaluate.go  evaluate_test.go
pkg/cli/: cli.go
pkg/util/: maps.go
py/: parse_and_notify.py  pyproject.toml  requirements.txt  test_parse_and_notify.py
scripts/: call_topicctl.py  parse_topicctl_output.py
